--- a/Homework4_Breast_Cancer.ipynb
+++ b/Homework4_Breast_Cancer.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 93,
       "metadata": {
         "id": "zSaGTA42WKZ-"
       },
@@ -47,6 +47,9 @@
         "\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
+        "import warnings\n",
+        "\n",
+        "warnings.filterwarnings(\"ignore\")\n",
         "\n",
         "from sklearn.datasets import load_breast_cancer\n",
         "from sklearn.model_selection import train_test_split, KFold, cross_val_score\n",
@@ -56,7 +59,7 @@
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.svm import SVC\n",
-        "from sklearn.metrics import confusion_matrix, classification_report, accuracy_score"
+        "from sklearn.metrics import confusion_matrix, classification_report, accuracy_score\n"
       ]
     },
     {
@@ -87,7 +90,7 @@
       "metadata": {
         "id": "pvbwL20gWL_A"
       },
-      "execution_count": 63,
+      "execution_count": 94,
       "outputs": []
     },
     {
@@ -110,9 +113,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mQ7m8h8FWeji",
-        "outputId": "da32d861-5c44-4268-9c7c-29999111544d"
+        "outputId": "9ddcb851-488a-40cc-cf18-c06682eaf6d2"
       },
-      "execution_count": 52,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,9 +141,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xjZDRlsYpkjJ",
-        "outputId": "5ac695b7-3c36-4447-fc3a-1051afbdee0a"
+        "outputId": "8ec55072-f93f-4ff5-cba1-763a0946bc47"
       },
-      "execution_count": 53,
+      "execution_count": 96,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,9 +169,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LLL9uNOtWjYP",
-        "outputId": "5703a1bd-217a-47b9-e1ba-8154b31f7449"
+        "outputId": "8059c5d1-8314-4266-e9af-50588b8280f2"
       },
-      "execution_count": 54,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,9 +202,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ew7qblHfWwmv",
-        "outputId": "344353a0-598a-47e6-f7f0-362f174d478c"
+        "outputId": "af689bc3-fb55-4cf2-e97c-15235a88c3f6"
       },
-      "execution_count": 69,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "stream",
@@ -230,9 +233,9 @@
           "height": 683
         },
         "id": "gdE8c5AYsBKd",
-        "outputId": "06e0da61-fb23-4764-f8bf-f0add79e1096"
+        "outputId": "3e4d4604-cce6-46eb-88f3-3127a6e179b1"
       },
-      "execution_count": 56,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,9 +284,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j3060hMjYu-l",
-        "outputId": "dccc3d4d-6e7c-40c1-86f8-5c86d26f4bca"
+        "outputId": "15dc667f-8d51-4239-9390-eda8653c3072"
       },
-      "execution_count": 65,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "stream",
@@ -329,9 +332,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nbtiyq93tk3C",
-        "outputId": "43e8f6b4-7928-48a4-c4b8-7d0ba28df6d0"
+        "outputId": "14cdcd79-2278-402e-ea63-69f9d38de68e"
       },
-      "execution_count": 61,
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,39 +343,7 @@
             "=== Model Comparison via 10-Fold CV ===\n",
             "GaussianNB             Mean CV Accuracy = 93.85%\n",
             "KNeighborsClassifier   Mean CV Accuracy = 96.83%\n",
-            "LogisticRegression     Mean CV Accuracy = 97.89%\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/sklearn/linear_model/_logistic.py:1256: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. Use OneVsRestClassifier(LogisticRegression(..)) instead. Leave it to its default value to avoid this warning.\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.12/dist-packages/sklearn/linear_model/_logistic.py:1256: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. Use OneVsRestClassifier(LogisticRegression(..)) instead. Leave it to its default value to avoid this warning.\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.12/dist-packages/sklearn/linear_model/_logistic.py:1256: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. Use OneVsRestClassifier(LogisticRegression(..)) instead. Leave it to its default value to avoid this warning.\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.12/dist-packages/sklearn/linear_model/_logistic.py:1256: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. Use OneVsRestClassifier(LogisticRegression(..)) instead. Leave it to its default value to avoid this warning.\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.12/dist-packages/sklearn/linear_model/_logistic.py:1256: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. Use OneVsRestClassifier(LogisticRegression(..)) instead. Leave it to its default value to avoid this warning.\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.12/dist-packages/sklearn/linear_model/_logistic.py:1256: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. Use OneVsRestClassifier(LogisticRegression(..)) instead. Leave it to its default value to avoid this warning.\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.12/dist-packages/sklearn/linear_model/_logistic.py:1256: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. Use OneVsRestClassifier(LogisticRegression(..)) instead. Leave it to its default value to avoid this warning.\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.12/dist-packages/sklearn/linear_model/_logistic.py:1256: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. Use OneVsRestClassifier(LogisticRegression(..)) instead. Leave it to its default value to avoid this warning.\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.12/dist-packages/sklearn/linear_model/_logistic.py:1256: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. Use OneVsRestClassifier(LogisticRegression(..)) instead. Leave it to its default value to avoid this warning.\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.12/dist-packages/sklearn/linear_model/_logistic.py:1256: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. Use OneVsRestClassifier(LogisticRegression(..)) instead. Leave it to its default value to avoid this warning.\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
+            "LogisticRegression     Mean CV Accuracy = 97.89%\n",
             "SVC                    Mean CV Accuracy = 97.89%\n"
           ]
         }
@@ -399,9 +370,9 @@
           "height": 426
         },
         "id": "M9bSyFWbYxs0",
-        "outputId": "37204f38-3e0d-4abd-d1a6-eb80728c044d"
+        "outputId": "5a643ab0-78a7-4769-88d8-d5fb636a3523"
       },
-      "execution_count": 59,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "display_data",
@@ -430,9 +401,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JGYoM1P0t59N",
-        "outputId": "463f758b-af3c-4ff2-d7a0-ad5aab14c931"
+        "outputId": "d35891b5-d84a-4b2f-818e-de407d45d2dd"
       },
-      "execution_count": 60,
+      "execution_count": 103,
       "outputs": [
         {
           "output_type": "stream",
@@ -444,14 +415,6 @@
             "KNeighborsClassifier   Test Accuracy = 95.91%\n",
             "LogisticRegression     Test Accuracy = 98.83%\n",
             "SVC                    Test Accuracy = 97.66%\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/sklearn/linear_model/_logistic.py:1256: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. Use OneVsRestClassifier(LogisticRegression(..)) instead. Leave it to its default value to avoid this warning.\n",
-            "  warnings.warn(\n"
           ]
         }
       ]
