Comparing the similarity between Shakespeare's Comedy of Error and Romeo and Juliet using spaCy

--- a/Discussion7_12_10.ipynb
+++ b/Discussion7_12_10.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOHj0GFJr6jcTL8Qyq9tGYz",
+      "authorship_tag": "ABX9TyMDaShgd0f8dbxgMGDOUd5N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -106,22 +106,22 @@
         "similarity = document1.similarity(document2)\n",
         "\n",
         "# Print result\n",
-        "print(f\"According to the spaCy's similarity detection, Shakespeare's Error of Comedy and Romeo and Juliet have a similarity of {similarity * 100: .2f}%\")"
+        "print(f\"According to the spaCy's similarity detection, Shakespeare's Comedy of Error and Romeo and Juliet have a similarity of {similarity * 100: .2f}%\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zryXjlLrCblu",
-        "outputId": "4831fd57-0c50-4962-ce03-b3d2b839ecc6"
+        "outputId": "24ef4fb3-cca6-4220-b548-66f935d6b32c"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "According to the spaCy's similarity detection, Shakespeare's Error of Comedy and Romeo and Juliet have a similarity of  50.28%\n"
+            "According to the spaCy's similarity detection, Shakespeare's Comedy of Error and Romeo and Juliet have a similarity of  50.28%\n"
           ]
         }
       ]
