--- a/Homework7_16_1.ipynb
+++ b/Homework7_16_1.ipynb
@@ -881,25 +881,70 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"Test Accuracy for the Fashion-MNIST dataset is: {:.2f}%\".format(accuracy * 100))\n",
-        "print(\"Test Accuracy for the MNIST dataset (according to the textbook example) is: {:.2f}%\".format(0.9917 * 100))"
+        "# Import libary to make print bold\n",
+        "from IPython.display import display, Markdown\n",
+        "\n",
+        "print()\n",
+        "print()\n",
+        "display(Markdown(f\"**Test Accuracy for the Fashion-MNIST dataset is: {accuracy * 100:.2f}%**\"))\n",
+        "display(Markdown(\"**Test Accuracy for the MNIST dataset (according to the textbook example) is: {:.2f}%**\".format(0.9917 * 100)))\n",
+        "print()\n",
+        "display(Markdown('**CNN generally performs better on MNIST than Fashion-MNIST as it achieves very high accuracy, almost a perfect score. This makes sense since Fashion-MNIST is more complex, working with clothing images in comparison to digits.**'))\n"
       ],
       "metadata": {
         "id": "KOoPILbljEIR",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 168
         },
-        "outputId": "12b6d7bd-a28a-483a-d9b4-df52b31e0fa3"
+        "outputId": "d145fcbf-8076-4e6e-e798-cb0d32a72aa8"
       },
-      "execution_count": 45,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Test Accuracy for the Fashion-MNIST dataset is: 89.65%\n",
-            "Test Accuracy for the MNIST dataset (according to the textbook example) is: 99.17%\n"
+            "\n",
+            "\n"
           ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "**Test Accuracy for the Fashion-MNIST dataset is: 89.65%**"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "**Test Accuracy for the MNIST dataset (according to the textbook example) is: 99.17%**"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "**CNN generally performs better on MNIST than Fashion-MNIST as it achieves very high accuracy, almost a perfect score. This makes sense since Fashion-MNIST is more complex, working with clothing images in comparison to digits.**"
+          },
+          "metadata": {}
         }
       ]
     },
@@ -969,7 +1014,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO/EwhE0a/cGtJzz8wgeFVE",
+      "authorship_tag": "ABX9TyNJWaf34a7iv4xBAVzMDPuz",
       "include_colab_link": true
     },
     "kernelspec": {
