--- a/Homework7_16_1.ipynb
+++ b/Homework7_16_1.ipynb
@@ -960,8 +960,8 @@
         "fashion_time, fashion_model = train_and_time(x_train_fashion, y_train_fashion)\n",
         "print()\n",
         "print()\n",
-        "print(f\"The training time on MNIST is: {mnist_time:.2f} seconds\")\n",
-        "print(f\"The training time on Fashion-MNIST is: {fashion_time:.2f} seconds\")\n"
+        "display(Markdown(f\"**The training time on MNIST is: {mnist_time:.2f} seconds**\"))\n",
+        "display(Markdown(f\"**The training time on Fashion-MNIST is: {fashion_time:.2f} seconds**\"))"
       ],
       "metadata": {
         "colab": {
@@ -1014,7 +1014,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJWaf34a7iv4xBAVzMDPuz",
+      "authorship_tag": "ABX9TyN/0Dq0w5EEnPCMF1q+3y3o",
       "include_colab_link": true
     },
     "kernelspec": {
